Add more figures from the paper.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -768,7 +768,7 @@
 %	Slide #2
 \frame
 {
-	\frametitle{Weaknesses}
+	\frametitle{Weaknesses - 1}
 	\framesubtitle{What are the weaknesses of this paper?}
 
 	\begin{itemize}
@@ -784,8 +784,50 @@
 		\end{enumerate}
 	\item Did not use box plots or bar charts to compare methods for each protein sequence in the datasets:
 	\end{itemize}
-
 }
+
+
+
+
+
+%	Slide #3
+\frame
+{
+	\frametitle{Weaknesses - 2}
+	\framesubtitle{What are the weaknesses of this paper?}
+
+	\begin{itemize}
+	\item Inadequate \href{https://blog.apastyle.org/apastyle/tables-and-figures/}{cross-referencing of figures and tables} in the text: 
+		%	https://gradschool.utah.edu/thesis/tables-and-figures/
+		%	https://guides.lib.umich.edu/c.php?g=283073&p=1888264
+		%	https://graduate.asu.edu/sites/default/files/chicago-quick-reference_0.pdf
+		%	https://graduateschool.nd.edu/assets/283522/wfrw_ii_figures_and_tables.pdf
+		%	https://www.overleaf.com/learn/latex/Cross_referencing_sections_and_equations
+		%	https://guides.lib.monash.edu/citing-referencing/apa-tables-figures
+		%	https://aso-resources.une.edu.au/academic-writing-course/information-basics/tables-figures/
+		%	https://pressbooks.bccampus.ca/technicalwriting/chapter/figurestables/
+		%	https://www.elsevier.com/__data/promis_misc/HPE_GfA.pdf
+		%	http://www.maths.adelaide.edu.au/anthony.roberts/LaTeX/ltxxref.php
+		%	https://en.wikipedia.org/wiki/Cross-reference
+		\begin{enumerate} 
+		\item When figures and tables are not cross referenced in the text, it takes more work to determine the context for each figure and table that I come across. The location of the figures and tables can be placed
+		\item Did not benchmark with other modern solutions for protein fold prediction
+			\begin{enumerate} 
+			\item PFPA (2015, IEEE Transactions on NanoBioscience); DOI: 10.1109/TNB.2015.2450233
+			\item random forest (2014, BMC Bioinformatics); DOI:10.1186/1471-2105-15-S11-S14
+			\item PFP-RFSM (2013, J. Biomedical Science and Engineering); DOI:10.4236/jbise.2013.612145 
+			\end{enumerate}
+		\end{enumerate}
+	\item Did not use box plots or bar charts to compare methods for each protein sequence in the datasets:
+	\end{itemize}
+}
+
+
+
+
+
+
+
 
 
 
