--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -437,7 +437,8 @@
 
 	Proposed Solution(s).
 	\begin{itemize}
-	\item Use 1-D deep convolutional neural network (deep CNN) 
+	\item Use 1-D deep convolutional neural network (deep CNN)
+	\item Use 3-level homology reduction strategy for dataset to avoid using same data in training, validation, and testing
 	\end{itemize}
 }
 
@@ -831,16 +832,16 @@
 	\framesubtitle{What are the weaknesses of this paper?}
 
 	\begin{itemize}
-	\item Did not do 
+	\item Did not do design space exploration for trade-offs between performance (execution time), accuracy, and memory usage.
 	\end{itemize}
 }
 
 
 
-
-
-
-
+%	https://www.technologyreview.com/s/615342/how-baidu-is-bringing-ai-to-the-fight-against-coronavirus/
+%	https://academic.oup.com/bioinformatics/article/35/14/i295/5529205
+%		RNA folding
+%			LinearFold: linear-time approximate RNA folding by 5'-to-3' dynamic programming and beam search
 
 
 
