--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -462,12 +462,25 @@
 	\item Use input feature generation and label assignment from PSI-BLAST.
 	\item Specifically, use position-specific scoring matrix
 	\item Train all mini-batches for 100 epochs
+	\end{itemize}
+}
+
+
+
+%	Slide #3
+\frame
+{
+	\frametitle{Proposed Solution(s) - 3}
+	\framesubtitle{What do they proposed to address the knowledge gap?}
+
+	Proposed Solution(s).
+	\begin{itemize}
 	\item Distance metrics
 		\begin{enumerate} 
-		\item Euclid-D, Euclidean distance
-		\item Manh-D, Manhattan distance
-		\item Corr-D, Pearson's Correlation score
-		\item KL-D, KL-Divergence
+		\item Euclid-D, Euclidean distance, $(Q, T) \mapsto \sqrt{\displaystyle\sum_{i = 1}^{N} (Q_{i} - T_{i})^{2}}$
+		\item Manh-D, Manhattan distance, $(Q, T) \mapsto \displaystyle\sum_{i = 1}^{N} |Q_{i} - T_{i}|$
+		\item Corr-D, Pearson's Correlation score, $(Q, T) \mapsto \log{(1 - Corr(Q, T))}$
+		\item KL-D, KL-Divergence, $(Q, T) \mapsto \displaystyle\sum_{i = 1}^{N} (Q_{i}\log{\frac{Q_{i}}{T_{i}} + T_{i}\log\frac{T_{i}}{Q_{i}}})$
 		\end{enumerate}
 	\end{itemize}
 }
