--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -482,6 +482,12 @@
 		\item Corr-D, Pearson's Correlation score, $(Q, T) \mapsto \log{(1 - Corr(Q, T))}$
 		\item KL-D, KL-Divergence, $(Q, T) \mapsto \displaystyle\sum_{i = 1}^{N} (Q_{i}\log{\frac{Q_{i}}{T_{i}} + T_{i}\log\frac{T_{i}}{Q_{i}}})$
 		\end{enumerate}
+	\item Group of folds:
+		\begin{enumerate} 
+		\item large: $>50$
+		\item medium: 6-50
+		\item small: $<5$
+		\end{enumerate}
 	\end{itemize}
 }
 
