--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -706,22 +706,19 @@
 
 
 
-
-
-
-%	Slide #2
-\frame
-{
-	\frametitle{Experimental Results - 2}
-	\framesubtitle{How do their proposed solutions compare with existing solutions?}
-
-	Experimental Results - 2.
-	\begin{itemize}
-	\item 
-	\end{itemize}
-
-}
-
+%	%	Slide #2
+%	\frame
+%	{
+%		\frametitle{Experimental Results - 2}
+%		\framesubtitle{How do their proposed solutions compare with existing solutions?}
+%	
+%		Experimental Results - 2.
+%		\begin{itemize}
+%		\item 
+%		\end{itemize}
+%	
+%	}
+%	
 
 
 
@@ -733,7 +730,7 @@
 %	Slide #3
 \frame
 {
-	\frametitle{Experimental Results - 3}
+	\frametitle{Experimental Results - 2}
 	\framesubtitle{Benchmarking}
 
 	Benchmarking of results with PSI-BLAST.
@@ -879,6 +876,8 @@
 	What do I not understand about \cite{Hou2018}?
 	\begin{itemize}
 	\item Why is it bad for top 1 predicted fold, but better for top 5 and top 10 predicted folds?
+	\item Why did they not use 2-D deep CNN?
+	\item In general, what are the advantages for 2-D deep CNN over 1-D deep CNN, and for 3-D deep CNN over 2-D deep CNN?
 	\end{itemize}
 
 }
